# test_rust

Drone/: .gitignore  README.md
Drone-main/: Cargo.toml
Drone-main/.github/workflows/: drone_test.yml
Drone-main/src/drone/: mod.rs
Drone/src/: lib.rs
Drone/src/config/: config.toml
Drone/src/drone/: rust_do_it.rs
Drone/src/test/: general_tests.rs
chat-server-main/: Cargo.toml  README.md
chat-server-main/src/: lib.rs
client/: Cargo.toml
client-main/: Cargo.toml  README.md
client-main/examples/: integration_example.rs
client-main/src/: assembler.rs  chat_client.rs  client.rs  errors.rs  lib.rs  main.rs  web_browser.rs
client/src/: chat_client.rs  errors.rs  lib.rs  web_browser.rs
common/: Cargo.toml
common-main/: Cargo.toml
common-main/src/: assembler.rs  file_conversion.rs  lib.rs  network.rs  packet_processor.rs  routing_handler.rs  server_base.rs  types.rs
common/src/: assembler.rs  lib.rs  network.rs  packet_processor.rs  routing_handler.rs  types.rs
content-server-main/: Cargo.toml  README.md
content-server-main/src/: assembler.rs  content_server.rs  errors.rs  lib.rs  main.rs  media_handler.rs  server.rs  text_handler.rs
media-server-main/: Cargo.toml  README.md
media-server-main/src/: assembler.rs  errors.rs  lib.rs  media_server.rs  server.rs
network-initializer/: Cargo.toml  README.md
network-initializer-main/: Cargo.toml  README.md
network-initializer-main/examples/: sample_network.toml
network-initializer-main/src/: errors.rs  lib.rs  main.rs  netwrok_initializer.rs  utils.rs
network-initializer-main/tests/: correct_config.toml  invalid_config.toml  unidirectional_error.toml
network-initializer/config/: butterfly.toml  config.toml  double_chain.toml  star.toml  sub_net_1.toml  sub_net_2.toml  test_chat_config.toml  test_config.toml  tree.toml
network-initializer/src/: errors.rs  lib.rs  network_initializer.rs  parser.rs  utils.rs
network-initializer/tests/: invalid_node_connection1.toml
server/: Cargo.toml  README.md
server/src/: communication_server.rs  lib.rs  media_server.rs  text_server.rs
simulation-controller/: Cargo.toml
simulation-controller-main/: README.md
simulation-controller/src/: main.rs  utils.rs
simulation-controller/ui/: add_sender_menu.slint  button.slint  drone_menu.slint  list_item.slint  main.slint  palette.slint  pdr_menu.slint
text-server-main/: Cargo.toml  README.md
text-server-main/src/: assembler.rs  errors.rs  lib.rs  main.rs  server.rs  text_server.rs
