[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
common = { git = "https://github.com/RustDoIt/common.git" }
tokio = { version = "1.47.1", features = ["full"] }
