[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
common = { path = "../common-main" }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }