[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
# common = { git = "https://github.com/RustDoIt/common.git" }
common = { path = "../common" }
tokio = { version = "1.47.1", features = ["full"] }
crossbeam-channel = "0.5.15"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.137" }
anyhow = "1.0.99"
uuid = { version = "1.18.0", features = ["serde"] }

