[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
crossbeam = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
