[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = [ "serde", "v4"] }
