[package]
name = "content-server"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
common = { path = "../common-main" }
crossbeam = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4.22"
env_logger = "0.11.6"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }