[package]
name = "network-initializer"
version = "0.1.0"
edition = "2024"

[dependencies]
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
common = { path = "../common" }
client = { path = "../client"}
server = { path = "../server"}

null-pointer-drone = { git = "https://github.com/The-Null-Pointer-Patrol/null-pointer-drone.git", branch = "main" }
wg_2024-rust = { git = "https://github.com/LuigiMiazzo17/unitn-advancedProgramming-WGL_2024-drone.git"}
d-r-o-n-e_drone = { git = "https://github.com/AP-2024-25-D-R-O-N-E/drone.git"}
rusteze_drone = { git = "https://github.com/Rusteze-AP/drone.git", branch = "main" }
ap2024_unitn_cppenjoyers_drone = { git = "https://github.com/Cpp-enjoyers/drone.git"}
dr_ones = { git = "https://github.com/Dr-Ones/drone", branch = "main" }
rusty_drones = { git = "https://github.com/rusty-drone-2024/rusty-drone.git", branch = "main" }
rustbusters-drone = { git = "https://github.com/Rustbusters/drone.git", branch = "main" }
rustafarian-drone = { git = "https://github.com/Rustafarian-Unitn/rustafarian-drone", branch = "main"}
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git", branch = "main" }
toml = "0.9.2"
serde = "1.0.219"
rand = "0.9.2"
crossbeam = "0.8.4"
paste = "1.0.15"
