[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
common = { path = "../common" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["serde"] }
